--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.path {
+  outline: none;
+}
+
+.path:focus {
+  outline: none;
+}
+
+.path:focus-visible {
+  outline: none;
+}
