projection and data update

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,40 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.path {
+  outline: none;
+}
+
+.path:focus {
+  outline: none;
+}
+
+.path:focus-visible {
+  outline: none;
+}
+
+.circle {
+  outline: none;
+}
+
+.circle:focus {
+  outline: none;
+}
+
+.circle:focus-visible {
+  outline: none;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.state-title {
+  font-size: 1.5em
 }
