--- a/src/App.css
+++ b/src/App.css
@@ -71,16 +71,30 @@
 }
 
 /* Table */
+
+table {
+  border: 1px solid #ccc;
+  margin-top: 5px;
+}
+
 th {
   color: #7c7c7c;
 }
 
 thead th {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 14px;
   font-family: DM sans;
+  border: 1px solid #ccc;
+  padding: 4px;
+  color: #fff;
+  background-color: #c62828
 }
 
 tbody td {
-  font-size: 12px
+  font-size: 15px;
+  border: 1px solid #ccc;
+  padding: 4px;
+  font-weight: 600;
+  text-align: center;
 }
