--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,17 @@
 
 .path {
   outline: none;
+  background: repeating-linear-gradient(45deg,
+      /* Angle of the lines */
+      rgba(0, 0, 255, 0.5),
+      /* Line color */
+      rgba(0, 0, 255, 0.5) 10px,
+      /* Line width */
+      rgba(255, 255, 255, 0) 10px,
+      /* Space color */
+      rgba(255, 255, 255, 0) 20px
+      /* Space width */
+    );
 }
 
 .path:focus {
