--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,8 @@ thead th {
   font-family: DM sans;
   border: 1px solid #ccc;
   padding: 4px;
-  color: #fff;
-  background-color: #c62828
+  color: #000;
+  /* background-color: #00A356 */
 }
 
 tbody td {
