--- a/src/App.css
+++ b/src/App.css
@@ -108,16 +108,15 @@ thead th {
   font-weight: 600;
   font-size: 12px;
   font-family: DM sans;
-  /* border: 1px solid #ccc; */
+  border-bottom: 1px solid #ccc;
   padding: 4px;
   color: #6c6a6a;
   text-align: left;
-  /* background-color: #c93235; */
 }
 
 tbody td {
   font-size: 12px;
-  border: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   padding: 4px;
   font-weight: 600;
   text-align: left;
