--- a/src/App.css
+++ b/src/App.css
@@ -116,8 +116,8 @@ thead th {
 
 tbody td {
   font-size: 12px;
-  border-bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
   padding: 4px;
   font-weight: 600;
-  text-align: left;
+  text-align: center;
 }
